--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     .header h1 { margin: 0; color: #005050; font-size: 24px; }
     .controls { display: flex; align-items: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
     .date-info { color: #005050; font-size: 18px; }
-    select, input[type="date"] { padding: 6px 10px; font-size: 16px; border-radius: 5px; border: none; }
-    #range-container { display: none; gap: 10px; }
+    select, input[type="date"], button { padding: 6px 10px; font-size: 16px; border-radius: 5px; border: none; }
+    button { background-color: #005050; color: #fff; cursor: pointer; }
     #stats-container, #scrap-waiting-container { width: 90%; margin: 24px auto; overflow-x: auto; }
     table { width: 100%; border-collapse: collapse; background-color: #222; color: #fff; }
     th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
@@ -35,19 +35,25 @@
         <option value="week">Tydzień</option>
         <option value="month">Miesiąc</option>
         <option value="year">Rok</option>
-        <option value="range">Zakres dat</option>
+        <option value="range">Zakres</option> <!-- 🔹 новый режим -->
       </select>
       <label class="date-info">Wybierz:</label>
       <select id="date-select"></select>
-      <div id="range-container">
+
+      <!-- 🔹 новые поля календаря -->
+      <span id="date-range-controls" style="display:none;">
+        <label class="date-info">Od:</label>
         <input type="date" id="date-from">
+        <label class="date-info">Do:</label>
         <input type="date" id="date-to">
-      </div>
+        <button id="apply-range">Pokaż</button>
+      </span>
     </div>
   </div>
 
   <div id="stats-container"></div>
 
+  <!-- Свертываемая таблица Scrap/Waiting -->
   <details id="scrap-waiting-table">
     <summary>Scrap / Waiting Stats</summary>
     <div id="scrap-waiting-container"></div>
@@ -149,9 +155,16 @@
 
     function fillDateSelect(filterType){
       const select = document.getElementById('date-select'); 
-      const rangeContainer = document.getElementById('range-container');
-      select.style.display = (filterType === "range") ? "none" : "inline-block";
-      rangeContainer.style.display = (filterType === "range") ? "flex" : "none";
+      const rangeControls = document.getElementById('date-range-controls');
+      select.style.display = (filterType==='range') ? 'none' : 'inline-block';
+      rangeControls.style.display = (filterType==='range') ? 'inline-block' : 'none';
+
+      if(filterType==='range'){
+        const today = new Date().toISOString().split('T')[0];
+        document.getElementById('date-from').value = today;
+        document.getElementById('date-to').value = today;
+        return null;
+      }
 
       select.innerHTML='';
       const now = new Date();
@@ -208,27 +221,20 @@
           select.appendChild(opt);
         }
       }
-      else if(filterType==='range'){
-        const from = document.getElementById("date-from");
-        const to = document.getElementById("date-to");
-        const today = now.toISOString().split("T")[0];
-        from.value = today;
-        to.value = today;
-      }
-
       return select.value;
     }
 
     async function update(){
       const filterType = document.getElementById('filter-type').value;
-      const selectedValue = document.getElementById('date-select').value;
       const allData = await fetchData();
       let filtered = [];
 
       if(filterType==='day'){
+        const selectedValue = document.getElementById('date-select').value;
         filtered=allData.filter(d=>d.date.startsWith(selectedValue));
       }
       else if(filterType==='week'){
+        const selectedValue = document.getElementById('date-select').value;
         const [startStr,endStr]=selectedValue.split('_');
         const startDate=new Date(startStr);
         const endDate=new Date(endStr);
@@ -238,22 +244,20 @@
         });
       }
       else if(filterType==='month'){
+        const selectedValue = document.getElementById('date-select').value;
         filtered=allData.filter(d=>d.date.startsWith(selectedValue));
       }
       else if(filterType==='year'){
+        const selectedValue = document.getElementById('date-select').value;
         filtered=allData.filter(d=>d.date.startsWith(selectedValue));
       }
-      else if(filterType==='range'){
-        const from = document.getElementById("date-from").value;
-        const to = document.getElementById("date-to").value;
-        if(from && to){
-          const startDate = new Date(from);
-          const endDate = new Date(to);
-          filtered = allData.filter(d=>{
-            const cur=new Date(d.date);
-            return cur>=startDate && cur<=endDate;
-          });
-        }
+      else if(filterType==='range'){ // 🔹 новый режим
+        const from = new Date(document.getElementById('date-from').value);
+        const to = new Date(document.getElementById('date-to').value);
+        filtered = allData.filter(d=>{
+          const cur = new Date(d.date);
+          return cur >= from && cur <= to;
+        });
       }
 
       const stats = calculateDetailedStats(filtered);
@@ -263,14 +267,96 @@
       renderScrapWaitingTable(scrapWaitingStats);
     }
 
+    function renderTable(stats){
+      const container=document.getElementById('stats-container'); container.innerHTML='';
+      const diagonals=Array.from(new Set(Object.values(stats).flatMap(p=>Object.keys(p).map(Number)))).sort((a,b)=>b-a);
+      let people=Object.keys(stats);
+      if(people.length===0){ container.innerHTML='<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
+      const totalPerDiagonal={}; diagonals.forEach(d=>totalPerDiagonal[d]=0);
+      const personTotals={};
+      people.forEach(person=>{
+        let total=0;
+        diagonals.forEach(d=>{ if(stats[person][d]){ total+=stats[person][d].sum; totalPerDiagonal[d]+=stats[person][d].sum; }});
+        personTotals[person]=total;
+      });
+      people=people.sort((a,b)=>(personTotals[b]||0)-(personTotals[a]||0));
+      const table=document.createElement('table');
+      const thead=document.createElement('thead'); const headerRow=document.createElement('tr');
+      const thName=document.createElement('th'); thName.textContent='Name'; headerRow.appendChild(thName);
+      diagonals.forEach(d=>{ const th=document.createElement('th'); th.textContent=d; headerRow.appendChild(th); });
+      ['Day','%','Total'].forEach(text=>{ const th=document.createElement('th'); th.textContent=text; if(text==='Total') th.className='total-col'; headerRow.appendChild(th); });
+      thead.appendChild(headerRow); table.appendChild(thead);
+      const tbody=document.createElement('tbody');
+      const globalTotal=Object.values(personTotals).reduce((a,b)=>a+b,0);
+      people.forEach(person=>{
+        const tr=document.createElement('tr');
+        const tdName=document.createElement('td'); tdName.textContent=person; tr.appendChild(tdName);
+        diagonals.forEach(d=>{ const td=document.createElement('td'); td.textContent=stats[person][d]?stats[person][d].sum:'-'; tr.appendChild(td); });
+        const daysSet=new Set(); diagonals.forEach(d=>{ if(stats[person][d]) stats[person][d].days.forEach(day=>daysSet.add(day)); });
+        const tdDays=document.createElement('td'); tdDays.textContent=daysSet.size; tr.appendChild(tdDays);
+        const tdPercent=document.createElement('td'); tdPercent.textContent=daysSet.size>0?(personTotals[person]/daysSet.size).toFixed(1):'0'; tr.appendChild(tdPercent);
+        const tdTotal=document.createElement('td'); tdTotal.textContent=personTotals[person]; tdTotal.classList.add('total-col'); tr.appendChild(tdTotal);
+        tbody.appendChild(tr);
+      });
+      table.appendChild(tbody);
+      const tfoot=document.createElement('tfoot'); const footerRow=document.createElement('tr');
+      const tdLabel=document.createElement('td'); tdLabel.textContent='Total Repaired'; footerRow.appendChild(tdLabel);
+      diagonals.forEach(d=>{ const td=document.createElement('td'); td.textContent=totalPerDiagonal[d]; td.classList.add('total-col'); footerRow.appendChild(td); });
+      footerRow.appendChild(document.createElement('td')); footerRow.appendChild(document.createElement('td'));
+      const tdGlobalTotal=document.createElement('td'); tdGlobalTotal.textContent=globalTotal; tdGlobalTotal.classList.add('total-col'); footerRow.appendChild(tdGlobalTotal);
+      tfoot.appendChild(footerRow); table.appendChild(tfoot);
+      container.appendChild(table);
+    }
+
+    function renderScrapWaitingTable(stats){
+      const container = document.getElementById('scrap-waiting-container');
+      container.innerHTML = '';
+      const diagonals = Array.from(new Set(Object.values(stats).flatMap(p => Object.keys(p).map(Number)))).sort((a,b)=>b-a);
+      const people = Object.keys(stats);
+      if(people.length === 0){ container.innerHTML = '<p style="text-align:center; margin-top:20px;">Brak danych</p>'; return; }
+
+      const table = document.createElement('table');
+      const thead = document.createElement('thead');
+      const headerRow = document.createElement('tr');
+      const thName = document.createElement('th'); thName.textContent = 'Name'; headerRow.appendChild(thName);
+      diagonals.forEach(d => { const th = document.createElement('th'); th.textContent = d; headerRow.appendChild(th); });
+      const thScrapTotal = document.createElement('th'); thScrapTotal.textContent = 'Scrap Total'; thScrapTotal.className='total-col'; headerRow.appendChild(thScrapTotal);
+      const thWaitingTotal = document.createElement('th'); thWaitingTotal.textContent = 'Waiting Total'; thWaitingTotal.className='total-col'; headerRow.appendChild(thWaitingTotal);
+      thead.appendChild(headerRow); table.appendChild(thead);
+
+      const tbody = document.createElement('tbody');
+      people.forEach(person => {
+        const tr = document.createElement('tr');
+        const tdName = document.createElement('td'); tdName.textContent = person; tr.appendChild(tdName);
+        let scrapSum = 0; let waitingSum = 0;
+        diagonals.forEach(d=>{
+          const td = document.createElement('td');
+          if(stats[person][d]){
+            td.innerHTML = `<div class="cell-split"><span class="scrap">${stats[person][d].scrap}</span><span class="waiting">${stats[person][d].waiting}</span></div>`;
+            scrapSum += stats[person][d].scrap;
+            waitingSum += stats[person][d].waiting;
+          } else td.textContent = '-';
+          tr.appendChild(td);
+        });
+        const tdScrapTotal = document.createElement('td'); tdScrapTotal.textContent = scrapSum; tdScrapTotal.className='total-col'; tr.appendChild(tdScrapTotal);
+        const tdWaitingTotal = document.createElement('td'); tdWaitingTotal.textContent = waitingSum; tdWaitingTotal.className='total-col'; tr.appendChild(tdWaitingTotal);
+        tbody.appendChild(tr);
+      });
+      table.appendChild(tbody);
+      container.appendChild(table);
+    }
+
     (async()=>{
       const filterTypeSelect=document.getElementById("filter-type");
-      fillDateSelect(filterTypeSelect.value);
+      fillDateSelect(filterTypeSelect.value); 
       await update();
-      filterTypeSelect.addEventListener("change", async()=>{ fillDateSelect(filterTypeSelect.value); await update(); });
+
+      filterTypeSelect.addEventListener("change", async()=>{ 
+        fillDateSelect(filterTypeSelect.value); 
+        await update(); 
+      });
       document.getElementById("date-select").addEventListener("change", async()=>{ await update(); });
-      document.getElementById("date-from").addEventListener("change", async()=>{ await update(); });
-      document.getElementById("date-to").addEventListener("change", async()=>{ await update(); });
+      document.getElementById("apply-range").addEventListener("click", async()=>{ await update(); });
       setInterval(update, 300000);
     })();
   </script>
