--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       background-position: center;
       background-repeat: no-repeat;
     }
-    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: rgba(17,17,17,0.85); flex-wrap: wrap; }
+    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: rgba(17,17,17,0.9); flex-wrap: wrap; }
     .header h1 { margin: 0; color: #005050; font-size: 24px; }
     .controls { display: flex; align-items: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
     .date-info { color: #005050; font-size: 18px; }
     select, input[type="date"], button { padding: 6px 10px; font-size: 16px; border-radius: 5px; border: none; }
     button { background-color: #005050; color: #fff; cursor: pointer; }
     #stats-container, #scrap-waiting-container { width: 90%; margin: 24px auto; overflow-x: auto; }
-    table { width: 100%; border-collapse: collapse; background-color: rgba(34,34,34,0.95); color: #fff; }
+    table { width: 100%; border-collapse: collapse; background-color: rgba(34,34,34,0.9); color: #fff; }
     th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
     th { background-color: #005050; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
-    td:first-child { background-color: #111; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
+    td:first-child { background-color: rgba(17,17,17,0.9); font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
     th.total-col, td.total-col { background-color: #005050; font-weight: bold; }
     tfoot td { background-color: #005050; font-weight: bold; }
     .cell-split { display: flex; justify-content: space-between; }
