--- a/index.html
+++ b/index.html
@@ -5,26 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LCDR LIVE DATA 2025</title>
   <style>
-    body { 
-      background-color: #000; 
-      color: #fff; 
-      font-family: Arial, sans-serif; 
-      background-image: url('https://raw.githubusercontent.com/iDLC1990/test/main/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: rgba(17,17,17,0.9); flex-wrap: wrap; }
+    body { background-color: #000; color: #fff; font-family: Arial, sans-serif; }
+    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: #111; flex-wrap: wrap; }
     .header h1 { margin: 0; color: #005050; font-size: 24px; }
     .controls { display: flex; align-items: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
     .date-info { color: #005050; font-size: 18px; }
     select, input[type="date"], button { padding: 6px 10px; font-size: 16px; border-radius: 5px; border: none; }
     button { background-color: #005050; color: #fff; cursor: pointer; }
     #stats-container, #scrap-waiting-container { width: 90%; margin: 24px auto; overflow-x: auto; }
-    table { width: 100%; border-collapse: collapse; background-color: rgba(34,34,34,0.9); color: #fff; }
+    table { width: 100%; border-collapse: collapse; background-color: #222; color: #fff; }
     th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
     th { background-color: #005050; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
-    td:first-child { background-color: rgba(17,17,17,0.9); font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
+    td:first-child { background-color: #111; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
     th.total-col, td.total-col { background-color: #005050; font-weight: bold; }
     tfoot td { background-color: #005050; font-weight: bold; }
     .cell-split { display: flex; justify-content: space-between; }
@@ -209,6 +201,7 @@
         });
       }
 
+      // Динамически собираем список всех диагоналей из выбранного диапазона
       const allDiagonals = Array.from(new Set(filtered.flatMap(d=>getDiagonals(d.serial)))).sort((a,b)=>b-a);
 
       renderTable(calculateDetailedStats(filtered), allDiagonals);
