--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>LCDR LIVE DATA 2025</title>
 <style>
-body { background-color: #000; color: #fff; font-family: Arial, sans-serif; }
+body { 
+  background-color: #000; 
+  color: #fff; 
+  font-family: Arial, sans-serif; 
+  background-image: url('https://github.com/iDLC1990/test/raw/main/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: #111; flex-wrap: wrap; }
 .header h1 { margin: 0; color: #005050; font-size: 24px; }
 .controls { display: flex; align-items: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
